--- a/templates/agregargenero.html
+++ b/templates/agregargenero.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h2>Agregar Género</h2>
-    <form method="POST" action="/agregargenero/" id="formGenero">
+    <form method="POST" action="/agregenero/" id="formGenero">
         <div class="form-group">
             <label for="formGroupExampleInput">Nombre del Género</label>
             <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Agregar Genero" required>
