--- a/templates/agregarpelicula.html
+++ b/templates/agregarpelicula.html
@@ -1,7 +1,7 @@
 {% extends 'principal.html' %}
 {% block content %}
 <h2>Agregar Película</h2>
-<form id="formPelicula" method="POST" action="/agregarpelicula/">
+<form id="formPelicula" method="POST" action="/agrepeliculas/">
   <div class="form-group">
     <label for="codigo">Código</label>
     <input type="text" class="form-control" id="codigo" name="codigo" placeholder="Código" required />
